---
Some cosmetic changes in views/style.css
---
Added outline for bages in statistic.js
views/index.js fix
---
Added edit buttons to web site
Some cosmetic changes in web site
Added function to server.js for getting player background file
---
Trying to fix 'undefined' err in modules/newsletter.js
Changed url GET params format, added fetch json with players cfg
Temporary added player_config.json in source. Searching other solutions
Source links fixes in newsletter.js etc
---
Fixed adress issue in module and command
Added icon on web
Fixing format of generated newsletter message. +considering of lower text fields. (from 1850 to 1900 means that text should be large, but it could not and can't find 'space')
---
Refactor modules/newsletter.js SendPost()
Added modules/set_activity.js to set current activity of bot. Using for setting 'test' while testing from local pc etc.
Refactoring modules/newsletter.js from callbacks to async/await
---
Fiexd type video inssue in modules/newsletter.js
Fixed messages fetch limit (increased from 1 to 10) in modules/newsletter.js
Kinda adaptive express host url in server.js and some commands
---
Fixing type video issue in modules/newsletter.js
Changed updating time in index.js
modules/statistic.js files array (frames) refactor to sort()
new commands group - mt.js
New format of todo.txt (translated to rus)
---
Added changelog.txt and todo.txt
Added .gitkeep in source/bages/frames for tracking frames folder
Added if condition in views/index.js: if name == zero --> return (in case if u entering localhost w/o params)